Exercise B1 - Add visitor comments on news page

--- a/AlloyTraining/Views/NewsPage/Index.cshtml
+++ b/AlloyTraining/Views/NewsPage/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model AlloyTraining.Models.ViewModels.DefaultPageViewModel<AlloyTraining.Models.Pages.NewsPage>
+﻿@using EPiServer.Core
+
+@model AlloyTraining.Models.ViewModels.NewsPageViewModel
 
 @{
     Layout = "~/Views/Shared/Layouts/_LeftNavigation.cshtml";
@@ -16,3 +18,23 @@
         @Html.PropertyFor(m => m.CurrentPage.MainListing)
     </div>
 </div>
+@if (!ContentReference.IsNullOrEmpty(Model.CurrentPage.CommentFolder))
+{
+    <h3>@Html.Translate("/postedcomment/listheading")</h3>
+    foreach (var c in Model.CommentList)
+    {
+        Html.RenderPartial("PostedComment", c);
+    }
+    @*//In a real project you would probably use a partial view here for the form.*@
+using (Html.BeginForm("Create", null, FormMethod.Post))
+{
+    <fieldset>
+        <legend>@Html.Translate("/postedcomment/form/fieldsetlegend")</legend>
+        @Html.Label("Your Name")
+        @Html.TextBox("CommentatorName")
+        @Html.Label(@Html.Translate("/postedcomment/form/commenttextlabel"))
+        @Html.TextArea("Text")
+        <input type="submit" value="@Html.Translate("/postedcomment/form/submitbutton")" />
+    </fieldset>
+    }
+}
